--- a/.github/workflows/cpptest.yml
+++ b/.github/workflows/cpptest.yml
@@ -1,9 +1,8 @@
 name: C++ Test
 
 on: 
-  push:
-    branches:
-      - test
+  schedule:
+    - cron:  '*/5 * * * *'
 
 jobs:
   build:
@@ -12,7 +11,5 @@ jobs:
     
     steps:
     - uses: actions/checkout@v2
-    - name: build
-      run: make
     - name: test
       run: make test
