--- a/.github/workflows/cpptest.yml
+++ b/.github/workflows/cpptest.yml
@@ -3,9 +3,9 @@ name: C++ Test
 on: 
   schedule:
     - cron:  '20 2 * * *'
-  build:
+  pull_request:
     branches:
-      - dev
+      - test
 
 jobs:
   test_app:
@@ -14,8 +14,6 @@ jobs:
     
     steps:
     - uses: actions/checkout@v2
-      with:
-          ref: test
     - name: branch name
       run: echo running on branch ${GITHUB_REF##*/}
     - name: rebase
