--- a/.github/workflows/cpptest.yml
+++ b/.github/workflows/cpptest.yml
@@ -3,7 +3,7 @@ name: C++ Test
 on: 
   schedule:
     - cron:  '20 2 * * *'
-  pull_request:
+  push:
     branches:
       - test
 
@@ -16,7 +16,7 @@ jobs:
     - uses: actions/checkout@v2
     - name: branch name
       run: echo running on branch ${GITHUB_REF##*/}
-    - name: rebase
-      run: git rebase dev
     - name: test library
       run: make test
+    - name: rebase master
+      run: git rebase master test
