--- a/.github/workflows/cppbuild.yml
+++ b/.github/workflows/cppbuild.yml
@@ -16,5 +16,6 @@ jobs:
       run: echo running on branch ${GITHUB_REF##*/}
     - name: build app
       run: make
-    - name: rebase test
-      run: git rebase test dev
+    - name: test app
+      run: make test
+
